--- a/css/style.css
+++ b/css/style.css
@@ -137,3 +137,33 @@ i.mdi.mdi-counter.text-white.live {
 #rightads2 {
     display: none !important;
 }
+
+.overlayError {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    pointer-events: none;
+    background-color: red;
+    opacity: 0.7;
+    animation: shake2 0.4s ease-in-out 0s infinite;
+}
+
+@keyframes shake2 {
+    0% {
+        background-color: red;
+    }
+
+    25% {
+        background-color: black;
+    }
+
+    75% {
+        background-color: red;
+    }
+
+    100% {
+        background-color: black;
+    }
+}
